# gheedorah

./: .gitignore  Cargo.toml  README.md  local.env  truffle-config.js
doco/: PRODUCT.md  TECH_SPECS.md
graphql/: create_orders_create_webhook.graphql  create_product.graphql  create_products_update_webhook.graphql  create_webhook.graphql  delete_webhook.graphql  get_products.graphql  get_webhooks.graphql  product_query.graphql  shopify.graphql
graphql/responses/: stubbed-product-create.json  stubbed-webhook-create.json
migrations/2021-07-14-233456_shopify_integrations/: down.sql  up.sql
scripts/: run-open-eth-dev.sh  run-tests.sh  setup-test-db.sh
src/: config.rs  db_conn.rs  lib.rs  main.rs  schema.rs  utils.rs
src/api/: health.rs  mod.rs  shopify.rs  shopify_order.rs  shopify_product.rs
src/handlers/: health_handler.rs  mod.rs  shopify_handler.rs  shopify_order_handler.rs  shopify_product_handler.rs
src/models/: mod.rs  shopify_integration.rs
src/routes/: health_route.rs  mod.rs  shopify_order_route.rs  shopify_product_route.rs  shopify_route.rs
src/services/: email_service.rs  mod.rs  shopify_graphql_service.rs  shopify_service.rs
test/: test-gheedorah.sol  test-test.sol
tests/: shopify_connection.rs  shopify_integration.rs
truffle/contracts/: Gheedorah.sol
truffle/migrations/: 2_deploy_contracts.js
