[package]
name = "sidecar"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mocks = []

[dependencies]
chrono = "0.4"
crypto-mac = "0.11.0"
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
hex = "0.4.3"
hmac = "0.11.0"
lazy-regex = "2.2.1"
log = "0.4.14"
mocktopus = "0.7.11"
reqwest = { version = "0.11.3", features = ["json"]}
reqwest_mock = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
sha2 = "0.9.5"
tokio = { version = "1", features = ["full"]  }
uuid = { version = "0.8.2", features = ["v4"] }
warp = { version = "0.3.1", features = ["tls"] }

[dev-dependencies]
mockito = "0.30.0"
